# fet

./: .gitignore  .todo.md  README.md  docker-compose.yml  main.py  pyproject.toml
coding_log/: 2025-10-26.md
src/: config.py  main.py
src/_shared/: config.py
src/_shared/infrastructure/: database.py  orm.py
src/application/: expense_exception.py  services.py
src/domain/: model.py  repositories.py
src/domain/expense/: exception.py  model.py
src/domain/user/: model.py
src/expense_management/api/: router.py
src/expense_management/application/: services.py
src/expense_management/domain/: exception.py  model.py  repository.py
src/expense_management/infrastructure/: exception.py  repository.py
src/iam/application/: services.py
src/iam/domain/: repository.py
src/iam/infrastructure/: repository.py
src/infrastructure/: database.py  exception.py  orm.py  repositories.py
src/organization/domain/: model.py
tests/: conftest.py  test_api.py  test_expense.py  test_repositories.py  test_services.py
tests/expense/: test_expense.py
