[project]
name = "fet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
